# waytooeasy

./: .gitignore  app.c  app.h  buffer.c  buffer.h  color.c  color.h  event_loop.c  event_loop.h  helpers.h  keyboard.c  keyboard.h  make.py  memory.c  memory.h  meson.build  pointer.c  pointer.h  wayland.c  wayland.h
.cache/clangd/index/: app.c.18F213D8B2A777E3.idx  app.h.95C6EA7745426918.idx  argb.c.47628AD72D5BADFE.idx  argb.h.3F68548B6AE94597.idx  array.h.06B36FE4414226F6.idx  buffer.c.33062527272E4E8B.idx  buffer.h.BBCD7F014AB41705.idx  camera.c.9FFFBFC55659DF75.idx  camera.h.EA52002B4F6FFA22.idx  color.c.E76BE1917033A7E8.idx  color.h.261F875D862AB435.idx  event_loop.c.753FDE8C895F2910.idx  event_loop.h.6C7B8E240AA75D27.idx  list.h.3CDEB8A9F276697A.idx  macros.h.CD4D6943D5A1B666.idx  main.c.59A7007A5CF1B123.idx  memory.c.D7CCF26675A5E0DA.idx  memory.h.52CE2D40950D6592.idx  mesh.c.E06266C3E714846A.idx  mesh.h.BA58E082B271F61E.idx  optional.h.96E6C49974D517FE.idx  scene.c.DF184E2057B0E7FF.idx  scene.h.B4617CC9BB593E3F.idx  shm.c.5615BE66CA4D175F.idx  shm.h.BC8C2609B6D5DFA3.idx  triangle.c.26D77AF36E21A879.idx  triangle.h.3E24890D72A4B337.idx  vec2.h.70A2D507A15E3924.idx  vec3.h.EFA4CF200DED2931.idx  wayland.c.11FB72FDB25FA5D9.idx  wayland.h.54998483BA138128.idx
util/: array.h  ints.h  macros.h  optional.h  vec2.h
